--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
     <script>
-        const API_URL = "DÁN_LINK_WEB_APP_MỚI_CỦA_BẠN_VÀO_ĐÂY";
+        const API_URL = "https://script.google.com/macros/s/AKfycbzBqXpVe-jZWEq4TFnYSZ6f91v7BV7pa-Ey7Q6B-aJSnT1C3D9JwTzbAf9WA__adYsI/exec";
         let capturedImage = "";
 
         async function handleLogin() {
